# spencer_people_tracking

detection/laser_detectors/spencer_leg_detector_wrapper/: CHANGELOG.rst  package.xml
detection/laser_detectors/srl_laser_detectors/: CHANGELOG.rst  package.xml
detection/laser_detectors/srl_laser_features/: CHANGELOG.rst  package.xml
detection/laser_detectors/srl_laser_segmentation/: CHANGELOG.rst  package.xml
detection/monocular_detectors/rwth_ground_hog/: CHANGELOG.rst  package.xml
detection/rgbd_detectors/pcl_people_detector/: CHANGELOG.rst  package.xml
detection/rgbd_detectors/rwth_upper_body_detector/: CHANGELOG.rst  package.xml
detection/spencer_detected_person_association/: CHANGELOG.rst  package.xml
detection/spencer_detected_person_conversion/: CHANGELOG.rst  package.xml
launch/spencer_people_tracking_launch/: CHANGELOG.rst  package.xml
launch/spencer_people_tracking_launch/launch/: tracking_on_robot.launch
messages/rwth_perception_people_msgs/: CHANGELOG.rst  package.xml
messages/spencer_human_attribute_msgs/: CHANGELOG.rst  package.xml
messages/spencer_social_relation_msgs/: CHANGELOG.rst  package.xml
messages/spencer_tracking_msgs/: CHANGELOG.rst  package.xml
messages/spencer_vision_msgs/: CHANGELOG.rst  package.xml
simulation/spencer_perception_mocks/: CHANGELOG.rst  README.md  package.xml
simulation/spencer_perception_mocks/launch/: all.launch
spencer_people_tracking/: CHANGELOG.rst  CMakeLists.txt  package.xml
tracking/groups/spencer_group_tracking/: CHANGELOG.rst  package.xml
utils/rwth_ground_plane/: CHANGELOG.rst  package.xml
utils/spencer_diagnostics/: CHANGELOG.rst  package.xml
utils/video_to_bagfile/: CHANGELOG.rst  CMakeLists.txt  package.xml
visualization/spencer_tracking_rviz_plugin/: CHANGELOG.rst  package.xml
visualization/srl_tracking_exporter/: CHANGELOG.rst  package.xml
(+12 files in other folders)
